force-app/main/default/objects/GuestroomTypeDay__c/GuestroomTypeDay__c.object-meta.xml
<CustomObject>
    <label>Guestroom Type Day</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guestroom Type Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>