force-app/main/default/objects/GuestroomTypeDay__c/fields/AverageRateBlockedDef__c.field-meta.xml
<CustomField>
    <fullName>AverageRateBlockedDef__c</fullName>
    <label>Room Type Average Definite Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>