force-app/main/default/objects/GuestroomTypeDay__c/fields/AverageRateBlockedDefTent__c.field-meta.xml
<CustomField>
    <fullName>AverageRateBlockedDefTent__c</fullName>
    <label>Room Type Average Rate (Def/Tent)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>