force-app/main/default/objects/GuestroomTypeDay__c/fields/AverageRateBlockedTent__c.field-meta.xml
<CustomField>
    <fullName>AverageRateBlockedTent__c</fullName>
    <label>Room Type Average Tentative Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>