force-app/main/default/objects/GuestroomTypeDay__c/fields/BlockedDefinite__c.field-meta.xml
<CustomField>
    <fullName>BlockedDefinite__c</fullName>
    <label>Room Type Group Definite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>