force-app/main/default/objects/GuestroomTypeDay__c/fields/BlockedDefTent__c.field-meta.xml
<CustomField>
    <fullName>BlockedDefTent__c</fullName>
    <label>Room Type Group Tentative and Definite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>