force-app/main/default/objects/GuestroomTypeDay__c/fields/BlockedProspect__c.field-meta.xml
<CustomField>
    <fullName>BlockedProspect__c</fullName>
    <label>Room Type Group Prospect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>