force-app/main/default/objects/GuestroomTypeDay__c/fields/BlockedTentative__c.field-meta.xml
<CustomField>
    <fullName>BlockedTentative__c</fullName>
    <label>Room Type Group Tentative</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>