force-app/main/default/objects/GuestroomTypeDay__c/fields/BudgetedRate__c.field-meta.xml
<CustomField>
    <fullName>BudgetedRate__c</fullName>
    <label>Budgeted Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>