force-app/main/default/objects/GuestroomTypeDay__c/fields/BudgetedRooms__c.field-meta.xml
<CustomField>
    <fullName>BudgetedRooms__c</fullName>
    <label>Budgeted Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>