force-app/main/default/objects/GuestroomTypeDay__c/fields/DailyRoomInventory__c.field-meta.xml
<CustomField>
    <fullName>DailyRoomInventory__c</fullName>
    <label>Room Type Daily Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>