force-app/main/default/objects/GuestroomTypeDay__c/fields/EffectiveDateString__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDateString__c</fullName>
    <externalId>true</externalId>
    <label>Effective Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>