force-app/main/default/objects/GuestroomTypeDay__c/fields/ForecastedOccupancy__c.field-meta.xml
<CustomField>
    <fullName>ForecastedOccupancy__c</fullName>
    <label>Room Type Forecasted Occupancy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>