force-app/main/default/objects/GuestroomTypeDay__c/fields/GroupAvailable__c.field-meta.xml
<CustomField>
    <fullName>GroupAvailable__c</fullName>
    <label>Room Type Group Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>