force-app/main/default/objects/GuestroomTypeDay__c/fields/GuestroomType__c.field-meta.xml
<CustomField>
    <fullName>GuestroomType__c</fullName>
    <label>Guestroom Type</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>GuestroomType__c</referenceTo>
    <relationshipLabel>Guestroom Type Days</relationshipLabel>
    <relationshipName>GuestroomTypeDays</relationshipName>
    <type>Lookup</type>
</CustomField>