force-app/main/default/objects/GuestroomTypeDay__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Property</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Guestroom Type Days</relationshipLabel>
    <relationshipName>GuestroomTypeDays</relationshipName>
    <type>Lookup</type>
</CustomField>