force-app/main/default/objects/GuestroomTypeDay__c/fields/MinimumAcceptableRate__c.field-meta.xml
<CustomField>
    <fullName>MinimumAcceptableRate__c</fullName>
    <label>MAR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>