force-app/main/default/objects/GuestroomTypeDay__c/fields/OccupancyPercentage__c.field-meta.xml
<CustomField>
    <fullName>OccupancyPercentage__c</fullName>
    <label>Room Type Occupancy %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>