force-app/main/default/objects/GuestroomTypeDay__c/fields/OutOfService__c.field-meta.xml
<CustomField>
    <fullName>OutOfService__c</fullName>
    <label>Room Type OOO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>