force-app/main/default/objects/GuestroomTypeDay__c/fields/PhysicalRoomInventory__c.field-meta.xml
<CustomField>
    <fullName>PhysicalRoomInventory__c</fullName>
    <label>Room Type Physical Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>