force-app/main/default/objects/GuestroomTypeDay__c/fields/PMSOnlyTransient__c.field-meta.xml
<CustomField>
    <fullName>PMSOnlyTransient__c</fullName>
    <label>PMS Only Transient</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>