force-app/main/default/objects/GuestroomTypeDay__c/fields/RackRate__c.field-meta.xml
<CustomField>
    <fullName>RackRate__c</fullName>
    <label>Rack Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>