force-app/main/default/objects/GuestroomTypeDay__c/fields/RevenueBlockedDef__c.field-meta.xml
<CustomField>
    <fullName>RevenueBlockedDef__c</fullName>
    <label>Room Type Definite Guestroom Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>