force-app/main/default/objects/GuestroomTypeDay__c/fields/RevenueBlockedTent__c.field-meta.xml
<CustomField>
    <fullName>RevenueBlockedTent__c</fullName>
    <label>Room Type Tentative Guestroom Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>