force-app/main/default/objects/GuestroomTypeDay__c/fields/RevenueDefTent__c.field-meta.xml
<CustomField>
    <fullName>RevenueDefTent__c</fullName>
    <label>Room Type Tent/Def Guestroom Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>