force-app/main/default/objects/GuestroomTypeDay__c/fields/RoomTypeAvailable__c.field-meta.xml
<CustomField>
    <fullName>RoomTypeAvailable__c</fullName>
    <label>Room Type Total Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>