force-app/main/default/objects/GuestroomTypeDay__c/fields/TotalAverageRateBlockedDef__c.field-meta.xml
<CustomField>
    <fullName>TotalAverageRateBlockedDef__c</fullName>
    <label>Average Definite Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>