force-app/main/default/objects/GuestroomTypeDay__c/fields/TotalAverageRateBlockedDefTent__c.field-meta.xml
<CustomField>
    <fullName>TotalAverageRateBlockedDefTent__c</fullName>
    <label>Average Rate (Def/Tent)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>