force-app/main/default/objects/GuestroomTypeDay__c/fields/TotalAverageRateBlockedTent__c.field-meta.xml
<CustomField>
    <fullName>TotalAverageRateBlockedTent__c</fullName>
    <label>Average Tentative Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>