force-app/main/default/objects/GuestroomTypeDay__c/fields/TotalBlockedDefinite__c.field-meta.xml
<CustomField>
    <fullName>TotalBlockedDefinite__c</fullName>
    <label>Total Group Definite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>