force-app/main/default/objects/GuestroomTypeDay__c/fields/TotalBlockedDefTent__c.field-meta.xml
<CustomField>
    <fullName>TotalBlockedDefTent__c</fullName>
    <label>Total Group Tentative and Definite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>