force-app/main/default/objects/GuestroomTypeDay__c/fields/TotalBlockedProspect__c.field-meta.xml
<CustomField>
    <fullName>TotalBlockedProspect__c</fullName>
    <label>Total Group Prospect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>