force-app/main/default/objects/GuestroomTypeDay__c/fields/TotalBlockedTentative__c.field-meta.xml
<CustomField>
    <fullName>TotalBlockedTentative__c</fullName>
    <label>Total Group Tentative</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>