force-app/main/default/objects/GuestroomTypeDay__c/fields/TotalDailyRoomInventory__c.field-meta.xml
<CustomField>
    <fullName>TotalDailyRoomInventory__c</fullName>
    <label>Total Daily Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>