force-app/main/default/objects/GuestroomTypeDay__c/fields/TotalForecastedOccupancy__c.field-meta.xml
<CustomField>
    <fullName>TotalForecastedOccupancy__c</fullName>
    <label>Forecasted Occupancy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>