force-app/main/default/objects/GuestroomTypeDay__c/fields/TotalGroupAvailable__c.field-meta.xml
<CustomField>
    <fullName>TotalGroupAvailable__c</fullName>
    <label>Group Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>