force-app/main/default/objects/GuestroomTypeDay__c/fields/TotalGroupCeiling__c.field-meta.xml
<CustomField>
    <fullName>TotalGroupCeiling__c</fullName>
    <label>Group Ceiling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>