force-app/main/default/objects/GuestroomTypeDay__c/fields/TotalOccupancyPercentage__c.field-meta.xml
<CustomField>
    <fullName>TotalOccupancyPercentage__c</fullName>
    <label>Occupancy %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>