force-app/main/default/objects/GuestroomTypeDay__c/fields/TotalOutOfService__c.field-meta.xml
<CustomField>
    <fullName>TotalOutOfService__c</fullName>
    <label>Total Out of Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>