force-app/main/default/objects/GuestroomTypeDay__c/fields/TotalPhysicalRoomInventory__c.field-meta.xml
<CustomField>
    <fullName>TotalPhysicalRoomInventory__c</fullName>
    <label>Total Physical Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>