force-app/main/default/objects/GuestroomTypeDay__c/fields/TotalRevenueBlockedDef__c.field-meta.xml
<CustomField>
    <fullName>TotalRevenueBlockedDef__c</fullName>
    <label>Total Definite Guestroom Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>