force-app/main/default/objects/GuestroomTypeDay__c/fields/TotalRevenueBlockedTent__c.field-meta.xml
<CustomField>
    <fullName>TotalRevenueBlockedTent__c</fullName>
    <label>Total Tentative Guestroom Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>