force-app/main/default/objects/GuestroomTypeDay__c/fields/TotalRevenueDefTent__c.field-meta.xml
<CustomField>
    <fullName>TotalRevenueDefTent__c</fullName>
    <label>Total Tent/Def Guestroom Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>