force-app/main/default/objects/GuestroomTypeDay__c/fields/TotalRoomTypeAvailable__c.field-meta.xml
<CustomField>
    <fullName>TotalRoomTypeAvailable__c</fullName>
    <label>Total Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>