force-app/main/default/objects/GuestroomTypeDay__c/fields/TotalTransientProtected__c.field-meta.xml
<CustomField>
    <fullName>TotalTransientProtected__c</fullName>
    <label>Total Transient Protected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>