force-app/main/default/objects/GuestroomTypeDay__c/fields/TotalTransientSold__c.field-meta.xml
<CustomField>
    <fullName>TotalTransientSold__c</fullName>
    <label>Total Transient Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>