force-app/main/default/objects/GuestroomTypeDay__c/fields/TransientProtected__c.field-meta.xml
<CustomField>
    <fullName>TransientProtected__c</fullName>
    <label>Room Type Transient Protected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>