force-app/main/default/objects/GuestroomTypeDay__c/fields/TransientProtectedRemaining__c.field-meta.xml
<CustomField>
    <fullName>TransientProtectedRemaining__c</fullName>
    <label>Transient Protected Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>