force-app/main/default/objects/GuestroomTypeDay__c/fields/TransientSold__c.field-meta.xml
<CustomField>
    <fullName>TransientSold__c</fullName>
    <label>Room Type Transient Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>